--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2024"
 [dependencies]
 image = "0.25.9"
 egui = "0.33.3"
-eframe = "0.33.3"
+eframe = { version = "0.33.3", features = ["wgpu"] }
+bytemuck = "1.24.0"
+naga = "=27.0.0"
 [build-dependencies]
 pkg-config = "0.3.32"
 bindgen = "0.72.1"
