--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ egui = "0.33.3"
 eframe = { version = "0.33.3", features = ["wgpu"] }
 bytemuck = "1.24.0"
 naga = "=27.0.0"
+egui-file-dialog = "0.12.0"
 [build-dependencies]
 pkg-config = "0.3.32"
 bindgen = "0.72.1"
